--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -1,29 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="/static/index.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>CA MARCHE !!!</h1>
-    <hr>
-    <div class="container">
-        {% for x in video %}
-        <h3 class="text-center mt-2 mb-2">{{x.caption}}</h3>
-        <div class="video-container">
-            <video class="responsive-video" controls>
-                <source src="{{x.video.url}}" type="video/mp4"/>
-                <source src="{{x.video.url}}" type="video/quicktime"/>
-            </video>
-        </div>
-        {% endfor %}
-    </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="/static/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <h1>CSS MARCHE PAS!!!</h1>
+  <hr>
+  <div>
+    {% for x in video %}
+      <div class="image-container">
+        <img src="{{x.thumbnail.url}}">
+        <h3 class="caption">{{x.caption}}</h3>
+      </div>
+  </div>
+    <!--<video class="responsive-video" controls>
+        <source src="{{x.video.url}}" type="video/mp4"/>
+        <source src="{{x.video.url}}" type="video/quicktime"/>
+        </video> -->
+  {% endfor %}
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
