--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -4,10 +4,11 @@
   width: 320px;
   height: 180px;
   margin: 10px;
-
+  float: left;
+  cursor: pointer;
 }
 
-.image-container img {
+.image-container a img {
   width: 100%;
   height: 100%;
   display: flex;
