addinf created_at row

--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -20,6 +20,7 @@
           <img src="{{x.thumbnail.url}}">
         </a>
         <h3 class="caption">{{x.caption}}</h3>
+        <p>{{ x.created_at }}</p>
       </div>
     {% endfor %}
   </div>
