--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-  <h1>CSS MARCHE PAS!!!</h1>
+  <div class="log-buttons">
+    <a class="btn btn-primary" href="/registration">Cygne Up</a>
+    <a class="btn btn-secondary" href="/login">Cygne In</a>
+  </div>
+  <h1>CSS MARCHE !!!</h1>
   <hr>
   <div>
     {% for x in video %}
@@ -31,5 +35,4 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
