--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -35,10 +35,53 @@
 }
 
 .log-buttons .btn-secondary {
-  background-color: purple;
+  display: flex;
+  position: relative;
+  left: 50px;
+  background-color: rgb(247, 0, 255);
 }
 
 .log-buttons .btn-primary {
-  background-color: rgb(204, 50, 150);
+  display: flex;
+  position: relative;
+  left: 50px;
+  background-color: rgb(50, 53, 204);
   margin-right: 10px;
+}
+
+.log-buttons .btn-third {
+  display: flex;
+  color: #008F11;
+  position: relative;
+  left: -1800px;
+}
+
+
+.form-control {
+  display: flex;
+  position: relative;
+  top: 10px;
+  left: 300px;
+  width: 50%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: var(--bs-border-radius);
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+[type=submit]:not(:disabled), button:not(:disabled) {
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  left: 1260px;
+  top: -27px;
 }
