--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Search Results</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Skilltube</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="log-buttons">
-    <a class="btn btn-primary" href="/registration">Cygne In</a>
-    <a class="btn btn-secondary" href="/login">Login</a>
+    <a class="btn btn-primary" href="/registration">Cygne Up</a>
+    <a class="btn btn-secondary" href="/login">Cygne In</a>
+    <a class="btn btn-third" href="/">Skilltube</a>
   </div>
-  
+
   <div class="search-section">
     <form action="/search" method="GET">
-      <div class="input-group mb-3">
+      <div class="input-group-mb-3">
         <input type="text" class="form-control" placeholder="Search" name="caption">
         <button class="btn btn-primary" type="submit">Search</button>
       </div>
     </form>
   </div>
-  
-  <h1>Search Results</h1>
-  <hr>
-  
+  <h1>CSS MARCHE !!!</h1>
   <div>
     {% for x in search_results %}
       <div class="image-container">
@@ -40,7 +39,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
