--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -57,12 +57,12 @@
 }
 
 
-.form-control {
+.search-section .input-group-mb-3 .form-Control {
   display: flex;
   position: relative;
   top: 10px;
-  left: 300px;
-  width: 50%;
+  left: 350px;
+  width: 30.5%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -82,6 +82,6 @@
   cursor: pointer;
   display: flex;
   position: relative;
-  left: 1260px;
-  top: -27px;
+  left: 935px;
+  top: -28px;
 }
