--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -1,32 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/style.css" rel="stylesheet">
-</head>
-
+<link href="/static/css/login.css" rel="stylesheet">
 <body>
-  <div class="container">
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+<div class="container">
+  <div class="row justify-content-center">
+  <div class="col-md-5">
+   <div class="card">
+     <h2 class="card-title text-center">Register</h2>
+      <div class="card-body py-md-4">
+       <form _lpchecked="1">
+          <div class="form-group">
+             <input type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+             <input type="email" class="form-control" id="email" placeholder="Email">
+                            </div>
+                            
+                          
+   <div class="form-group">
+     <input type="password" class="form-control" id="password" placeholder="Password">
+   </div>
+   <div class="form-group">
+      <input type="password" class="form-control" id="confirm-password" placeholder="confirm-password">
+   </div>
+   <div class="d-flex flex-row align-items-center justify-content-between">
+                                <button class="btn btn-primary">Create Account</button>
+          </div>
+       </form>
+     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
+</div>
+</div>
+</div>
 </body>
-
-</html>
