--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -13,14 +13,14 @@
 <body>
   <div class="log-buttons">
     <a class="btn btn-primary" href="/registration">Cygne Up</a>
-    <a class="btn btn-secondary" href="/login">Cygne In</a>
+    <a class="btn btn-secondary" href="/login">Log In</a>
     <a class="btn btn-third" href="/">Skilltube</a>
   </div>
 
   <div class="search-section">
     <form action="/search" method="GET">
       <div class="input-group-mb-3">
-        <input type="text" class="form-control" placeholder="Search" name="caption">
+        <input type="text" class="form-Control" placeholder="Search" name="caption">
         <button class="btn btn-primary" type="submit">Search</button>
       </div>
     </form>
