--- a/skilltube_frontend/src/index.css
+++ b/skilltube_frontend/src/index.css
@@ -1,8 +1,11 @@
+/*** Font settings ***/
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+
 body {
+  text-align: center;
+  font-family: 'Share Tech Mono', monospace;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
