--- a/skilltube_backend/main/static/css/registration.css
+++ b/skilltube_backend/main/static/css/registration.css
@@ -21,17 +21,16 @@ a:hover{
   top: 10%;
 }
 .form-control{
-  background-color: #f8f9fa;
-  padding: 20px;
+  background-color: #ffffff;
   padding: 25px 15px;
   margin-bottom: 1.3rem;
 }
 
 .form-control:focus {
 
-    color: #000000;
+    color: green;
     background-color: #ffffff;
-    border: 3px solid #da5767;
+    border: 3px solid #da5757;
     outline: 0;
     box-shadow: none;
 
@@ -39,7 +38,7 @@ a:hover{
 
 .btn{
   padding: 0.6rem 1.2rem;
-  background: #57da85;
+  background: #57da6f;
   border: 2px solid #57da7e;
 }
 .btn-primary:hover {
