--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -1,28 +1,21 @@
-<link href="/static/css/login.css" rel="stylesheet">
+<link href="/static/css/registration.css" rel="stylesheet">
 <body>
 <div class="container">
   <div class="row justify-content-center">
   <div class="col-md-5">
    <div class="card">
-     <h2 class="card-title text-center">Register</h2>
+     <h2 class="card-title text-center">Login</h2>
       <div class="card-body py-md-4">
        <form _lpchecked="1">
           <div class="form-group">
              <input type="text" class="form-control" id="username" placeholder="Username">
         </div>
-        <div class="form-group">
-             <input type="email" class="form-control" id="email" placeholder="Email">
-                            </div>
-                            
-                          
+                                      
    <div class="form-group">
      <input type="password" class="form-control" id="password" placeholder="Password">
    </div>
-   <div class="form-group">
-      <input type="password" class="form-control" id="confirm-password" placeholder="confirm-password">
-   </div>
    <div class="d-flex flex-row align-items-center justify-content-between">
-                                <button class="btn btn-primary">Create Account</button>
+                                <button class="btn btn-primary">Login</button>
           </div>
        </form>
      </div>
