--- a/skilltube_backend/main/templates/registration.html
+++ b/skilltube_backend/main/templates/registration.html
@@ -1,29 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>User Registration</title>
-</head>
+<link href="/static/css/registration.css" rel="stylesheet">
 <body>
-  <h1>User Registration</h1>
-  <form method="POST" action="/register">
-    {% csrf_token %}
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <div>
-      <label for="password_confirmation">Confirm Password:</label>
-      <input type="password" id="password_confirmation" name="password_confirmation" required>
-    </div>
-    <button type="submit">Register</button>
-  </form>
+<div class="container">
+  <div class="row justify-content-center">
+  <div class="col-md-5">
+   <div class="card">
+     <h2 class="card-title text-center">Register</h2>
+      <div class="card-body py-md-4">
+       <form _lpchecked="1">
+          <div class="form-group">
+             <input type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+             <input type="email" class="form-control" id="email" placeholder="Email">
+                            </div>
+                            
+                          
+   <div class="form-group">
+     <input type="password" class="form-control" id="password" placeholder="Password">
+   </div>
+   <div class="form-group">
+      <input type="password" class="form-control" id="confirm-password" placeholder="confirm-password">
+   </div>
+   <div class="d-flex flex-row align-items-center justify-content-between">
+                                <button class="btn btn-primary">Create Account</button>
+          </div>
+       </form>
+     </div>
+  </div>
+</div>
+</div>
+</div>
 </body>
-</html>
