--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -12,8 +12,10 @@
 
 <body>
   <div class="log-buttons">
-    <a class="btn btn-primary" href="/registration">Cygne Up</a>
+    <a class="btn btn-primary" href="/registration/">Cygne Up</a>
     <a class="btn btn-secondary" href="/login">Log In</a>
+  </div>
+  <div class="home-btn">
     <a class="btn btn-third" href="/">Skilltube</a>
   </div>
 
