add a player that not works correctly --> to be corrected later

--- a/skilltube_frontend/src/index.css
+++ b/skilltube_frontend/src/index.css
@@ -2,10 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 
+
 body {
   text-align: center;
   font-family: 'Share Tech Mono', monospace;
   margin: 0;
+  background-color: black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,4 +15,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header {
+  background-color: black;
+  color: #008f26;
 }
