--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -1,5 +1,8 @@
 <link href="/static/css/registration.css" rel="stylesheet">
 <body>
+  <div class="home-btn">
+    <a class="btn btn-third" href="/">Skilltube</a>
+  </div>
 <div class="container">
   <div class="row justify-content-center">
   <div class="col-md-5">
