--- a/skilltube_backend/main/templates/registration.html
+++ b/skilltube_backend/main/templates/registration.html
@@ -1,33 +1,36 @@
 <link href="/static/css/registration.css" rel="stylesheet">
+
 <body>
-<div class="container">
-  <div class="row justify-content-center">
-  <div class="col-md-5">
-   <div class="card">
-     <h2 class="card-title text-center">Register</h2>
-      <div class="card-body py-md-4">
-       <form _lpchecked="1">
-          <div class="form-group">
-             <input type="text" class="form-control" id="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-             <input type="email" class="form-control" id="email" placeholder="Email">
-                            </div>
-                            
-                          
-   <div class="form-group">
-     <input type="password" class="form-control" id="password" placeholder="Password">
-   </div>
-   <div class="form-group">
-      <input type="password" class="form-control" id="confirm-password" placeholder="confirm-password">
-   </div>
-   <div class="d-flex flex-row align-items-center justify-content-between">
-                                <button class="btn btn-primary">Create Account</button>
-          </div>
-       </form>
-     </div>
+  <div class="home-btn">
+    <a class="btn btn-third" href="/">Skilltube</a>
   </div>
-</div>
-</div>
-</div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-5">
+        <div class="card">
+          <h2 class="card-title text-center">Register</h2>
+          <div class="card-body py-md-4">
+            <form method="POST">
+              {% csrf_token %}
+              <div class="form-group">
+                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+              </div>
+              <div class="form-group">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+              </div>
+              <div class="form-group">
+                <input type="password" class="form-control" id="confirm-password" name="password_confirmation" placeholder="Confirm Password">
+              </div>
+              <div class="d-flex flex-row align-items-center justify-content-between">
+                <button type="submit" class="btn btn-primary">Create Account</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
