--- a/skilltube_backend/main/templates/registration.html
+++ b/skilltube_backend/main/templates/registration.html
@@ -1,36 +1,18 @@
-<link href="/static/css/registration.css" rel="stylesheet">
+<!-- registration.html -->
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Registration Form</title>
+    <!-- Add your CSS styles here for the cool look -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
-  <div class="home-btn">
-    <a class="btn btn-third" href="/">Skilltube</a>
-  </div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-5">
-        <div class="card">
-          <h2 class="card-title text-center">Register</h2>
-          <div class="card-body py-md-4">
-            <form method="POST">
-              {% csrf_token %}
-              <div class="form-group">
-                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-              </div>
-              <div class="form-group">
-                <input type="password" class="form-control" id="confirm-password" name="password_confirmation" placeholder="Confirm Password">
-              </div>
-              <div class="d-flex flex-row align-items-center justify-content-between">
-                <button type="submit" class="btn btn-primary">Create Account</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <h2>Registration Form</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Register</button>
+    </form>
 </body>
+</html>
