--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -1,29 +1,31 @@
-<link href="/static/css/registration.css" rel="stylesheet">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login Form</title>
+    <!-- Add your CSS styles here for the cool look -->
+    <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+</head>
 <body>
-  <div class="home-btn">
-    <a class="btn btn-third" href="/">Skilltube</a>
-  </div>
-<div class="container">
-  <div class="row justify-content-center">
-  <div class="col-md-5">
-   <div class="card">
-     <h2 class="card-title text-center">Log in</h2>
-      <div class="card-body py-md-4">
-       <form _lpchecked="1">
-          <div class="form-group">
-             <input type="text" class="form-control" id="username" placeholder="Username">
+    <h2>Login Form</h2>
+
+
+    {% if request.GET.error_message %}
+    <div class="alert alert-success">
+      {{ request.GET.error_message }}
+    </div>
+    {% endif %}
+
+    <form method="post">
+        {% csrf_token %}
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
         </div>
-                                      
-   <div class="form-group">
-     <input type="password" class="form-control" id="password" placeholder="Password">
-   </div>
-   <div class="d-flex flex-row align-items-center justify-content-between">
-                                <button class="btn btn-primary">Log in</button>
-          </div>
-       </form>
-     </div>
-  </div>
-</div>
-</div>
-</div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">Login</button>
+    </form>
 </body>
+</html>
