--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="log-buttons">
+    <a class = "btn btn-fourth" href="/video_upload">Upload</a>
     <a class="btn btn-primary" href="/registration/">Cygne Up</a>
     <a class="btn btn-secondary" href="/login">Log In</a>
   </div>
@@ -33,7 +34,7 @@
       </div>
     </form>
   </div>
-  <h1>CSS MARCHE !!!</h1>
+  <h1>TOUT MARCHE !!!</h1>
   <div>
     {% for x in video %}
       <div class="image-container">
