--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="log-buttons">
+    <a class = "btn btn-fourth" href="/video_upload">Upload</a>
     <a class="btn btn-primary" href="/registration/">Cygne Up</a>
     <a class="btn btn-secondary" href="/login">Log In</a>
   </div>
