--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -40,10 +40,20 @@
   background-color: rgba(255, 0, 0, 0.726);
 }
 
+.log-buttons .btn-secondary:hover {
+  display: flex;
+  background-color: rgba(255, 0, 132, 0.726);
+}
+
 .log-buttons .btn-primary {
   display: flex;
   background-color: rgb(50, 53, 204);
   margin-right: 10px;
+}
+
+.log-buttons .btn-primary:hover {
+  display: flex;
+  background-color: rgba(0, 98, 255, 0.726);
 }
 
 .log-buttons .btn-fourth {
@@ -51,6 +61,10 @@
   background-color: #008f26;
   margin-right: 30px;
   color: white;
+}
+
+.log-buttons .btn-fourth:hover {
+  background-color: #628f00;
 }
 
 .home-btn .btn-third {
@@ -97,4 +111,19 @@
   display: flex;
   justify-content: center;
   color: darkgreen;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
 }
