--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -7,7 +7,7 @@
   <title>Skilltube</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link href="/static/css/style.css" rel="stylesheet">
+  <link href="/static/css/video.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,17 +35,16 @@
     </form>
   </div>
   <h1>TOUT MARCHE JE SUIS MEGA BALEZE ET JE NE SUIS PLUS DANS MAGMA !!!</h1>
-  <div>
-    {% for x in video %}
-      <div class="image-container">
-        <a href="/video/{{ x.video_id }}" target="_blank">
-          <img src="{{x.thumbnail.url}}">
-        </a>
-        <h3 class="caption">{{x.caption}}</h3>
-        <p>{{ x.created_at }}</p>
-      </div>
-    {% endfor %}
+
+  <div class="video-container">
+    <video controls>
+        <source src="/media/{{ video.video }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <h3 class="caption">{{ video.caption }}</h3>
+    <h2 class="uploaded-date">{{ video.created_at }}</h2>
   </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
