--- a/skilltube_backend/main/static/css/video.css
+++ b/skilltube_backend/main/static/css/video.css
@@ -1,34 +1,13 @@
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    margin-left: 10px;
-  }
-  
-  .video-container video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 50%;
-  }
+.video-container .video-player video {
+  width:50%;
+  height: 550px;
+  margin-left: 10px;
+}
 
-  .video-container .caption {
-    margin-top: 10px;
-    font-size: 30px;
-    color: #333;
-    position: relative;
-    top: 550px;
-  }
-
-  .video-container .uploaded-date {
-    margin-top: 10px;
-    font-size: 16px;
-    color: #333;
-    position: relative;
-    top: 550px;
-  }
+.caption-date {
+  margin-left: 15px;
+  color: darkgreen;
+}
 
   .search-section .input-group-mb-3 .form-Control {
     display: flex;
