--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -11,44 +11,58 @@
 </head>
 
 <body>
-  <div class="log-buttons">
-    <a class = "btn btn-fourth" href="/video_upload">Upload</a>
-    <a class="btn btn-primary" href="/registration/">Cygne Up</a>
-    <a class="btn btn-secondary" href="/login">Log In</a>
-  </div>
-  <div class="home-btn">
-    <a class="btn btn-third" href="/">Skilltube</a>
-  </div>
 
-  {% if request.GET.success_message %}
-  <div class="alert alert-success">
-    {{ request.GET.success_message }}
-  </div>
-  {% endif %}
+  <header>
+    <div class="home-btn">
+      <a class="btn btn-third" href="/">Skilltube</a>
+    </div>
+    <div class="log-buttons">
+      <button class="btn btn-primary" type="submit">Search</button>
+      <a class="btn btn-fourth" href="/video_upload">Upload</a>
+      <a class="btn btn-primary" href="/registration/">Cygne Up</a>
+      <a class="btn btn-secondary" href="/login">Log In</a>
+    </div>
+    <div>
+      <h2>HEADER</h2>
+    </div>
+  </header>
 
-  <div class="search-section">
-    <form action="/search" method="GET">
-      <div class="input-group-mb-3">
-        <input type="text" class="form-Control" placeholder="Search" name="caption">
-        <button class="btn btn-primary" type="submit">Search</button>
-      </div>
-    </form>
-  </div>
-  <h1>TOUT MARCHE JE SUIS MEGA BALEZE ET JE NE SUIS PLUS DANS MAGMA !!!</h1>
+
+  <nav>
+    {% if request.GET.success_message %}
+    <div class="alert alert-success">
+      {{ request.GET.success_message }}
+    </div>{% endif %}
+
+    <div class="search-section">
+      <form action="/search" method="GET">
+        <div class="input-group-mb-3">
+          <input type="text" class="form-Control" placeholder="Search" name="caption">
+        </div>
+      </form>
+    </div>
+  </nav>
+  <h1>TOUT MARCHE, MAIS PAS GRACE A OTHMANE LA CAMBRIOLE !!!</h1>
   <div>
     {% for x in video %}
-      <div class="image-container">
-        <a href="/video/{{ x.video_id }}" target="_blank">
-          <img src="{{x.thumbnail.url}}">
-        </a>
-        <h3 class="caption">{{x.caption}}</h3>
-        <p>{{ x.created_at }}</p>
-      </div>
+    <div class="image-container">
+      <a href="/video/{{ x.video_id }}" target="_blank">
+        <img src="{{x.thumbnail.url}}">
+      </a>
+      <h3 class="caption">{{x.caption}}</h3>
+      <p>{{ x.created_at }}</p>
+    </div>
     {% endfor %}
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+
+  <footer>
+    <h2>FOOTER</h2>>
+  </footer>
+
 </body>
+
 </html>
