--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -13,36 +13,45 @@
 <body>
 
   <header>
-    <div class="home-btn">
-      <a class="btn btn-third" href="/">Skilltube</a>
+    <div class="container">
+      <div class="row">
+        <div class="home-btn col-4 ">
+          <a class="btn btn-third" href="/">Skilltube</a>
+        </div>
+        <div class="col-4 ">
+          {% if request.GET.success_message %}
+          <div class="alert ">
+            {{ request.GET.success_message }}
+          </div>{% endif %}
+      
+          <div class="search-section">
+            <form action="/search" method="GET" class="d-flex" role="search" >
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+        <div class="log-buttons col-4 ">
+          <!-- <button class="btn btn-primary" type="submit">Search</button> -->
+          <a class="btn btn-fourth" href="/video_upload">Upload</a>
+          <a class="btn btn-primary" href="/registration/">Cygne Up</a>
+          <a class="btn btn-secondary" href="/login">Log In</a>
+        </div>
+      </div>
     </div>
-    <div class="log-buttons">
-      <button class="btn btn-primary" type="submit">Search</button>
-      <a class="btn btn-fourth" href="/video_upload">Upload</a>
-      <a class="btn btn-primary" href="/registration/">Cygne Up</a>
-      <a class="btn btn-secondary" href="/login">Log In</a>
-    </div>
-    <div>
-      <h2>HEADER</h2>
-    </div>
+    
+
   </header>
 
-
-  <nav>
-    {% if request.GET.success_message %}
-    <div class="alert alert-success">
-      {{ request.GET.success_message }}
-    </div>{% endif %}
-
-    <div class="search-section">
-      <form action="/search" method="GET">
-        <div class="input-group-mb-3">
-          <input type="text" class="form-Control" placeholder="Search" name="caption">
-        </div>
-      </form>
+<main>
+ <div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Watch videos !!!</h1>
     </div>
-  </nav>
-  <h1>TOUT MARCHE, MAIS PAS GRACE A OTHMANE LA CAMBRIOLE !!!</h1>
+  </div>
+  <div class="row">
+
   <div>
     {% for x in video %}
     <div class="image-container">
@@ -55,12 +64,23 @@
     {% endfor %}
   </div>
 
+  </div>
+
+ </div>
+</main>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
   <footer>
-    <h2>FOOTER</h2>>
+    <div class="row">
+      <div class="col-12">
+        <p class="footer">Simon@2023</p>
+      </div>
+    </div>
   </footer>
 
 </body>
