--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -26,7 +26,7 @@
       
           <div class="search-section">
             <form action="/search" method="GET" class="d-flex" role="search" >
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
@@ -55,7 +55,7 @@
   <div>
     {% for x in video %}
     <div class="image-container">
-      <a href="/video/{{ x.video_id }}" target="_blank">
+      <a href="/video/{{ x.video_id }}">
         <img src="{{x.thumbnail.url}}">
       </a>
       <h3 class="caption">{{x.caption}}</h3>
