--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -1,32 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 body {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color:#008f26;
   font-family: 'Share Tech Mono', monospace;
 }
 footer {
   text-align: center;
-  position: bottom
+  bottom:0;
 }
 
 .image-container {
   margin-right: 10px;
   margin-left: 10px;
   position: relative;
-  width: 320px;
+  width: 250px;
   margin-bottom: 30px;
-  height: 180px;
+  height: 250px;
   float: left;
 }
 
 .image-container a img {
-  width: 100%;
-  height: 100%;
+  width: 250px;
+  height: 250px;
   display: flex;
   object-fit: cover;
   flex-wrap: nowrap;
   cursor: pointer;
+  display: flex;
 }
 
 .caption {
