--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -58,7 +58,7 @@
               <img src="{{x.thumbnail.url}}">
             </a>
             <h3 class="caption">{{x.caption}}</h3>
-            <p>{{ x.created_at }}</p>
+            <p>{{ x.created_at }} {{x.category}}</p>
           </div>
           {% endfor %}
         </div>
