--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -14,15 +14,15 @@ footer {
   margin-right: 10px;
   margin-left: 10px;
   position: relative;
-  width: 250px;
+  width: 320px;
   margin-bottom: 30px;
-  height: 250px;
+  height: 180px;
   float: left;
 }
 
 .image-container a img {
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   display: flex;
   object-fit: cover;
   flex-wrap: nowrap;
