--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -43,7 +43,7 @@
   </header>
 
   <main>
-    <div class="container">
+    <div class="container bg-secondary">
       <div class="row">
         <div class="col-12">
           <h1>Watch videos !!!</h1>
