--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -13,7 +13,6 @@
 <body>
 
   <header>
-    <div class="container">
       <div class="row">
         <div class="home-btn col-4 bg-danger">
           <a class="btn btn-third" href="/">Skilltube</a>
@@ -31,13 +30,16 @@
             </form>
           </div>
         </div>
-        <div class="log-buttons col-4 bg-info">
-          <a class="btn btn-fourth" href="/video_upload">Upload</a>
-          <a class="btn btn-primary" href="/registration/">Sign Up</a>
-          <a class="btn btn-secondary" href="/login">Log In</a>
+        <div class="log-buttons col-4 bg-info justify-content-between">
+          <div>
+            <a class="btn btn-fourth" href="/video_upload">Upload</a>
+          </div>
+          <div class="d-flex ml-auto">
+            <a class="btn btn-primary" href="/registration/">Sign Up</a>
+            <a class="btn btn-secondary" href="/login">Log In</a>
+          </div>
         </div>
       </div>
-    </div>
 
 
   </header>
