--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -13,46 +13,45 @@
 <body>
 
   <header>
-      <div class="row">
-        <div class="home-btn col-4 bg-danger">
-          <a class="btn btn-third" href="/">Skilltube</a>
-        </div>
-        <div class="col-4 ">
-          {% if request.GET.success_message %}
-          <div class="alert ">
-            {{ request.GET.success_message }}
-          </div>{% endif %}
+    <div class="row">
+      <div class="home-btn col-4">
+        <a class="btn btn-third" href="/">Skilltube</a>
+      </div>
+      <div class="col-4 ">
+        {% if request.GET.success_message %}
+        <div class="alert ">
+          {{ request.GET.success_message }}
+        </div>{% endif %}
 
-          <div class="search-section bg-primary">
-            <form action="/search" method="GET" class="d-flex" role="search">
-              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-        <div class="log-buttons col-4 bg-info justify-content-between">
-          <div>
-            <a class="btn btn-fourth" href="/video_upload">Upload</a>
-          </div>
-          <div class="d-flex ml-auto">
-            <a class="btn btn-primary" href="/registration/">Sign Up</a>
-            <a class="btn btn-secondary" href="/login">Log In</a>
-          </div>
+        <div class="search-section">
+          <form action="/search" method="GET" class="d-flex" role="search">
+            <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
       </div>
+      <div class="log-buttons col-4 justify-content-between">
+        <div>
+          <a class="btn btn-fourth" href="/video_upload">Upload</a>
+        </div>
+        <div class="d-flex ml-auto">
+          <a class="btn btn-primary" href="/registration/">Sign Up</a>
+          <a class="btn btn-secondary" href="/login">Log In</a>
+        </div>
+      </div>
+    </div>
 
 
   </header>
 
   <main>
-    <div class="container bg-secondary">
+    <div class="container">
       <div class="row">
         <div class="col-12">
           <h1>Watch videos !!!</h1>
         </div>
       </div>
       <div class="row">
-
         <div>
           {% for x in video %}
           <div class="image-container">
@@ -60,13 +59,11 @@
               <img src="{{x.thumbnail.url}}">
             </a>
             <h3 class="caption">{{x.caption}}</h3>
-            <p>{{ x.created_at }} {{x.category}}</p>
+            <p>{{ x.created_at }} <br>Level: {{x.category}}</p>
           </div>
           {% endfor %}
         </div>
-
       </div>
-
     </div>
   </main>
 
@@ -76,11 +73,9 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-  <footer>
-    <div class="row">
-      <div class="col-12">
-        <p class="footer">Simon&Ethan@2023</p>
-      </div>
+  <footer class="footer">
+    <div>
+      <p>Simon&Ethan@2023</p>
     </div>
   </footer>
 
