--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -11,38 +11,73 @@
 </head>
 
 <body>
-  <div class="log-buttons">
-    <a class = "btn btn-fourth" href="/video_upload">Upload</a>
-    <a class="btn btn-primary" href="/registration/">Cygne Up</a>
-    <a class="btn btn-secondary" href="/login">Log In</a>
-  </div>
-  <div class="home-btn">
-    <a class="btn btn-third" href="/">Skilltube</a>
-  </div>
 
-  <div class="search-section">
-    <form action="/search" method="GET">
-      <div class="input-group-mb-3">
-        <input type="text" class="form-Control" placeholder="Search" name="caption">
-        <button class="btn btn-primary" type="submit">Search</button>
+  <header>
+      <div class="row">
+        <div class="home-btn col-4">
+          <a class="btn btn-third" href="/">Skilltube</a>
+        </div>
+        <div class="col-4 ">
+          <div class="search-section">
+            <form action="/search" method="GET" class="d-flex" role="search">
+              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+        <div class="log-buttons col-4 justify-content-between">
+          <div>
+            <a class="btn btn-fourth" href="/video_upload">Upload</a>
+          </div>
+          <div class="d-flex ml-auto">
+            <a class="btn btn-primary" href="/registration/">Sign Up</a>
+            <a class="btn btn-secondary" href="/login">Log In</a>
+          </div>
+        </div>
       </div>
-    </form>
-  </div>
-  <h1>CSS MARCHE !!!</h1>
-  <div>
-    {% for x in search_results %}
-      <div class="image-container">
-        <a href="/video/{{ x.video_id }}">
-          <img src="{{x.thumbnail.url}}">
-        </a>
-        <h3 class="caption">{{x.caption}}</h3>
-        <p>{{ x.created_at }}</p>
+
+
+  </header>
+
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>Watch videos !!!</h1>
+        </div>
       </div>
-    {% endfor %}
-  </div>
+      <div class="row">
+        <div>
+          {% for x in search_results %}
+            <div class="image-container">
+              <a href="/video/{{ x.video_id }}">
+                <img src="{{x.thumbnail.url}}">
+              </a>
+              <h3 class="caption">{{x.caption}}</h3>
+              <p>{{ x.created_at }}</p>
+            </div>
+            {% empty %}
+              <h3>No video found</h3>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </main>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+
+  <footer>
+    <div class="row">
+      <div class="col-12">
+        <p class="footer">Simon&Ethan@2023</p>
+      </div>
+    </div>
+  </footer>
+
 </body>
+
 </html>
