--- a/skilltube_backend/main/templates/registration.html
+++ b/skilltube_backend/main/templates/registration.html
@@ -1,11 +1,8 @@
-<!-- registration.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>Registration Form</title>
-    <!-- Add your CSS styles here for the cool look -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/registration.css">
 </head>
 <body>
     <h2>Registration Form</h2>
