--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -18,11 +18,6 @@
         <a class="btn btn-third" href="/">Skilltube</a>
       </div>
       <div class="col-4 ">
-        {% if request.GET.success_message %}
-        <div class="alert ">
-          {{ request.GET.success_message }}
-        </div>{% endif %}
-
         <div class="search-section">
           <form action="/search" method="GET" class="d-flex" role="search">
             <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
@@ -42,11 +37,17 @@
     </div>
   </header>
 
+  
   <main>
     <div class="container">
       <div class="row">
         <div class="col-12">
           <h1>Watch videos !!!</h1>
+          {% if request.GET.success_message %}
+          <div class="alert ">
+            {{ request.GET.success_message }}
+          </div>
+          {% endif %}
         </div>
       </div>
       <div class="row">
