adding css btn for sign up

--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -21,6 +21,7 @@
           <div class="search-section">
             <form action="/search" method="GET" class="d-flex" role="search">
               <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+              <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
