--- a/skilltube_backend/main/static/css/registration.css
+++ b/skilltube_backend/main/static/css/registration.css
@@ -56,8 +56,7 @@ input[type="email"] {
 }
 
 .home-btn .btn-third {
-  margin-left: auto;
-  width: 110px;
+  width: 102px;
   height: 36px;
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
@@ -68,8 +67,8 @@ input[type="email"] {
   border: 1px solid #008f26;
   border-radius: 0.375rem;
   top: -50px;
-  margin: 10px;
   text-decoration: none;
   vertical-align: middle;
-  margin: 10px;
+  margin-top: 10px;
+  margin-left: 2px;
 }
