--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -11,38 +11,31 @@
 </head>
 
 <body>
-
   <header>
-    <div class="container ml-4">
-      <div class="row">
-        <div class="home-btn col-4">
-          <a class="btn btn-third" href="/">Skilltube</a>
+    <div class="row">
+      <div class="home-btn col-4">
+        <a class="btn btn-third" href="/">Skilltube</a>
+      </div>
+      <div class="col-4 ">
+        <div class="search-section">
+          <form action="/search" method="GET" class="d-flex" role="search">
+            <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+            <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
-        <div class="col-4 ">
-          {% if request.GET.success_message %}
-          <div class="alert ">
-            {{ request.GET.success_message }}
-          </div>{% endif %}
-
-          <div class="search-section">
-            <form action="/search" method="GET" class="d-flex" role="search">
-              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+      </div>
+      <div class="log-buttons col-4 justify-content-between">
+        <div>
+          <a class="btn btn-fourth" href="/video_upload">Upload</a>
         </div>
-        <div class="log-buttons col-4 justify-content-between">
-          <div>
-            <a class="btn btn-fourth" href="/video_upload">Upload</a>
-          </div>
-          <div class="d-flex ml-auto">
-            <a class="btn btn-primary" href="/registration/">Sign Up</a>
-            <a class="btn btn-secondary" href="/login">Log In</a>
-          </div>
+        <div class="d-flex ml-auto">
+          <a class="btn btn-primary" href="/registration/">Sign Up</a>
+          <a class="btn btn-secondary" href="/login">Log In</a>
         </div>
       </div>
     </div>
-  </header>
+</header>
 
   <main>
     <div class="container">
