adding css btn for video_upload

--- a/skilltube_backend/main/templates/video_upload.html
+++ b/skilltube_backend/main/templates/video_upload.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" type="text/css" href="/static/css/video_uploader.css">
     </head>
 <body>
+    <div class="row">
+        <div class="home-btn col-4">
+          <a class="btn btn-third" href="/">Skilltube</a>
+        </div>
+    </div>
 
 <h1>Select a video to upload</h1>
 <form enctype="multipart/form-data" method="POST" action="">
