--- a/skilltube_backend/main/static/css/video_uploader.css
+++ b/skilltube_backend/main/static/css/video_uploader.css
@@ -1,62 +1,78 @@
-/* CSS code for Video Uploader page */
+/* CSS code for Registration Form page */
+
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-  }
-  
-  h1 {
-    text-align: center;
-    color: #333;
-    margin-top: 50px;
-  }
-  
-  form {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  input[type="submit"] {
-    background-color: #4abe59;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #1ca32e;
-  }
-  
-  input[type="file"] {
-    margin-bottom: 10px;
-  }
-  
-  label {
-    display: block;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  textarea {
-    resize: vertical;
-    height: 100px;
-  }
+  color:#008f26;
+  font-family: 'Share Tech Mono', monospace;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  color: #008f26;
+  margin-top: 50px;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+button[type="submit"] {
+  background-color:  #008f26;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button[type="submit"]:hover {
+  background-color: #0069d9;
+}
+
+label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.home-btn .btn-third {
+  width: 102px;
+  height: 36px;
+  --bs-btn-padding-x: 0.75rem;
+  --bs-btn-padding-y: 0.375rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #008f26;
+  border: 1px solid #008f26;
+  border-radius: 0.375rem;
+  top: -50px;
+  text-decoration: none;
+  vertical-align: middle;
+  margin-top: 10px;
+  margin-left: 2px;
+}
