--- a/skilltube_backend/main/templates/video_upload.html
+++ b/skilltube_backend/main/templates/video_upload.html
@@ -15,6 +15,6 @@
 <form enctype="multipart/form-data" method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Upload"/>
+    <button type="submit">Upload</button>
 </form>
 </body>
