--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -63,6 +63,7 @@ body {
 .log-buttons .btn-secondary {
   display: flex;
   background-color: rgba(220, 9, 9, 0.726);
+  margin-right: 10px;
 }
 
 .log-buttons .btn-secondary:hover {
