update the footer

--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -69,13 +69,13 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-  <footer>
-    <div class="row">
-      <div class="col-12">
-        <p class="footer">Simon&Ethan@2023</p>
+    <footer class="footer">
+      <div>
+        <row>
+        <col class='text-center py-3'>Copyright &copy; Cymon3th4n</col>
+      </row>
       </div>
-    </div>
-  </footer>
+    </footer>
 
 </body>
 
