--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -78,7 +78,9 @@
 
   <footer class="footer">
     <div>
-      <p>Simon&Ethan@2023</p>
+      <row>
+      <col class='text-center py-3'>Copyright &copy; Cymon3th4n</col>
+    </row>
     </div>
   </footer>
 
