--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -67,11 +67,13 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-  <footer class="footer">
-    <div>
-      <p>Simon&Ethan@2023</p>
-    </div>
-  </footer>
+    <footer class="footer">
+      <div>
+        <row>
+        <col class='text-center py-3'>Copyright &copy; Cymon3th4n</col>
+      </row>
+      </div>
+    </footer>
 
 </body>
 
