--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -21,7 +21,7 @@
     </div>
     {% endif %}
 
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
         <div>
             <label for="username">Username:</label>
