--- a/skilltube_backend/main/templates/registration.html
+++ b/skilltube_backend/main/templates/registration.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <h2>Registration Form</h2>
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Register</button>
