adding logout system

--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -55,6 +55,7 @@
           <div class="caption-date">
             <h2 class="caption">{{ video.caption }}</h2>
             <h3 class="uploaded-date">{{ video.created_at }}</h3>
+            <h4 class="uploader">Uploaded by: {{ video.user.username }}</h4>
           </div>
         </div>
       </div>
