--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -13,48 +13,75 @@
 <body>
 
   <header>
-      <div class="row">
-        <div class="home-btn col-4">
-          <a class="btn btn-third" href="/">Skilltube</a>
-        </div>
-        <div class="col-4 ">
-          <div class="search-section">
-            <form action="/search" method="GET" class="d-flex" role="search">
-              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
-              <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-        <div class="log-buttons col-4 justify-content-between">
-          <div>
-            <a class="btn btn-fourth" href="/video_upload">Upload</a>
-          </div>
-          <div class="d-flex ml-auto">
-            <a class="btn btn-primary" href="/registration/">Sign Up</a>
-            <a class="btn btn-secondary" href="/login">Log In</a>
-          </div>
+    <div class="row">
+      <div class="home-btn col-4">
+        <a class="btn btn-third" href="/">Skilltube</a>
+      </div>
+      <div class="col-4 ">
+        <div class="search-section">
+          <form action="/search" method="GET" class="d-flex" role="search">
+            <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+            <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
       </div>
+      {% if user.is_authenticated %}
+      <div class="log-buttons col-4 justify-content-end">
+        <div>
+          <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Log Out</button>
+          </form>
+        </div>
+      </div>
+      {% else %}
+      <div class="log-buttons col-4 justify-content-between">
+        <div>
+          {% if user.autehnticated %}
+            <a class="btn btn-fourth" href="/video_upload">Upload</a>
+          {% else %}
+            <a class="btn btn-fourth" href="/login">Upload</a>
+          {% endif %}
+        </div>
+        <div class="d-flex ml-auto">
+          <a class="btn btn-primary" href="/registration/">Sign Up</a>
+          <a class="btn btn-secondary" href="/login">Log In</a>
+        </div>
+      </div>
+      {% endif %}
+    </div>
   </header>
 
+
   <main>
-    <div class="container">
-      <div class="row">
+    <div class="row m-lg-4">
+      <div class="col-2">
       </div>
-      <div class="row">
-        <div>
-          {% for x in search_results %}
+      <div class="col-9">
+        <div class="row">
+          <div class="col-9">
+            {% if request.GET.success_message %}
+            <div class="alert ">
+              {{ request.GET.success_message }}
+            </div>
+            {% endif %}
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            {% for x in search_results %}
             <div class="image-container">
               <a href="/video/{{ x.video_id }}">
                 <img src="{{x.thumbnail.url}}">
               </a>
               <h3 class="caption">{{x.caption}}</h3>
-              <p>{{ x.created_at }} <br>Level: {{x.category}}</p>
+              <p>{{ x.created_at }} <br>Level: {{x.category}} <br>Uploaded by: {{ x.user.username }}</p>
             </div>
             {% empty %}
               <h3>No video found</h3>
           {% endfor %}
+          </div>
         </div>
       </div>
     </div>
@@ -66,13 +93,13 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-    <footer class="footer">
-      <div>
-        <row>
-        <col class='text-center py-3'>Copyright &copy; Cymon3th4n</col>
-      </row>
-      </div>
-    </footer>
+  <footer class="footer">
+    <div>
+      <row>
+      <col class='text-center py-3'>Copyright &copy; Cymon3th4n</col>
+    </row>
+    </div>
+  </footer>
 
 </body>
 
