--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -28,6 +28,7 @@
       </div>
       {% if user.is_authenticated %}
       <div class="log-buttons col-4 justify-content-end">
+        <a class="btn btn-fourth" href="/video_upload">Upload</a>
         <div>
           <form action="{% url 'logout' %}" method="POST">
             {% csrf_token %}
@@ -76,11 +77,11 @@
                 <img src="{{x.thumbnail.url}}">
               </a>
               <h3 class="caption">{{x.caption}}</h3>
-              <p>{{ x.created_at }} <br>Level: {{x.category}} <br>Uploaded by: {{ x.user.username }}</p>
+              <p>{{ x.created_at }} <br>Level: {{x.category}}</p>
             </div>
             {% empty %}
               <h3>No video found</h3>
-          {% endfor %}
+          ²²{% endfor %}
           </div>
         </div>
       </div>
