adding logout system

--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -81,7 +81,7 @@
             </div>
             {% empty %}
               <h3>No video found</h3>
-          ²²{% endfor %}
+            {% endfor %}
           </div>
         </div>
       </div>
