--- a/skilltube_backend/main/templates/video_upload.html
+++ b/skilltube_backend/main/templates/video_upload.html
@@ -15,6 +15,9 @@
 <form enctype="multipart/form-data" method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
+    {% if error_message %}
+        <p class="text-danger">{{ error_message }}</p>
+    {% endif %}
     <button type="submit">Upload</button>
 </form>
 </body>
