--- a/skilltube_backend/main/templates/search_results.html
+++ b/skilltube_backend/main/templates/search_results.html
@@ -58,6 +58,9 @@
   <main>
     <div class="row m-lg-4">
       <div class="col-2">
+        {% if user.is_authenticated %}
+          <a class="btn btn-five" href="/my_videos/{{ request.user.username }}">My Videos</a>
+        {% endif %}
       </div>
       <div class="col-9">
         <div class="row">
