adding liste deroulante

--- a/skilltube_backend/main/static/css/video.css
+++ b/skilltube_backend/main/static/css/video.css
@@ -93,10 +93,15 @@ body {
   display: flex;
   background-color: #008f26;
   color: white;
+  margin-right: 10px;
 }
 
 .log-buttons .btn-fourth:hover {
   background-color: #379c37;
+}
+
+.log-buttons .btn-danger {
+  margin-right: 10px;
 }
 
 .home-btn .btn-third {
