--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -20,22 +20,41 @@
         <div class="search-section">
           <form action="/search" method="GET" class="d-flex" role="search">
             <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
-            <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
+            <select class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
+              <option value="">All categories</option>
+              <option value="Noob">Noob</option>
+              <option value="Beginner">Beginner</option>
+              <option value="Intermediate">Intermediate</option>
+              <option value="Advanced">Advanced</option>
+              <option value="Masterclass">Masterclass</option>
+            </select>
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
       </div>
+      {% if user.is_authenticated %}
+      <div class="log-buttons col-4 justify-content-end">
+        <a class="btn btn-fourth" href="/video_upload">Upload</a>
+        <div>
+          <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Log Out</button>
+          </form>
+        </div>
+      </div>
+      {% else %}
       <div class="log-buttons col-4 justify-content-between">
         <div>
-          <a class="btn btn-fourth" href="/video_upload">Upload</a>
+            <a class="btn btn-fourth" href="/login">Upload</a>
         </div>
         <div class="d-flex ml-auto">
           <a class="btn btn-primary" href="/registration/">Sign Up</a>
           <a class="btn btn-secondary" href="/login">Log In</a>
         </div>
       </div>
+      {% endif %}
     </div>
-</header>
+  </header>
 
   <main>
     <div class="container">
