adding no videos in my videos page

--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -178,3 +178,8 @@ body {
 .user-videos-name:hover {
   color: darkgreen;
 }
+
+.no-video-uploaded {
+  text-align: center;
+  margin-right: 140px;
+}
