--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link href="/static/css/video.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <body>
@@ -72,12 +74,30 @@
             </video>
           </div>
           <div class="caption-date">
+            <div class="like-button">
+              <form method="POST" action="{% url 'add_like' video_id=video.video_id %}">
+                {% csrf_token %}
+                <button type="submit" style="background: none; border: none;">
+                  <i class="fas fa-heart"></i>
+                </button>
+              </form>
+              <div class="like-total">
+                <p>{{ like_count }}</p>
+              </div>
+            </div>
+            <div class="error-like">
+            {% if request.GET.error_message_like %}
+              <p>{{ request.GET.error_message_like }}</p>
+            {% endif %}
+            </div>
             <h1 class="caption">{{ video.caption }}</h1>
             <h4 class="uploaded-date">{{ video.created_at }}</h4>
             <h4 class="uploader">Uploaded by: {{ video.user.username }}</h4>
-          </div>
         </div>
       </div>
+
+      <script src="/static/like.js"></script>
+
       <h2>Comment section</h2>
       <h3>{{ video.comments.count }} comment(s)</h3>
       <br>
